Fixed button issues on firefox

--- a/ui/themes/default/e-gecko.css
+++ b/ui/themes/default/e-gecko.css
@@ -177,7 +177,9 @@ table.form td.joinedflags span.flag_on,
 table.form td.joinedflags span.flag_off, 
 table.form td div span.toggle_on,
 table.form td div span.toggle_off {
-    padding: 0.4em 0.5em 0.4em 0.5em;
+/*    padding: 0.4em 0.5em 0.4em 0.5em; */
+    /* Em was giving weird border issues */
+    padding: 6px 7px;
 }
 
 span.fabutton_off,
